# whatcolor

./: Cargo.toml  README.md  build.rs  install.ps1  run.cmd
.github/workflows/: release.yml
src/: clipboard.rs  color.rs  main.rs  sampler.rs
