[package]
name = "whatcolor"
version = "0.1.0"
edition = "2021"
description = "Instant screen color picker. No bloat. One hotkey. One .exe."
authors = ["whatcolor contributors"]

[[bin]]
name = "whatcolor"
path = "src/main.rs"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
arboard = "3"
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
